RESOLVED FIXED266528
[IFC][Ruby] Fix fast/text/ruby-justification-flush.html
https://bugs.webkit.org/show_bug.cgi?id=266528
Summary [IFC][Ruby] Fix fast/text/ruby-justification-flush.html
alan
Reported 2023-12-15 20:37:12 PST
ssia
Attachments
[fast-cq]Patch (7.08 KB, patch)
2023-12-15 20:40 PST, alan
no flags
alan
Comment 1 2023-12-15 20:40:38 PST
Created attachment 469083 [details] [fast-cq]Patch
EWS
Comment 2 2023-12-16 04:35:11 PST
Committed 272178@main (9ef3ca69ef4a): <https://commits.webkit.org/272178@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 469083 [details].
Radar WebKit Bug Importer
Comment 3 2023-12-16 04:36:14 PST
Note You need to log in before you can comment on or make changes to this bug.