[IFC][Ruby] Fix fast/text/ruby-justification-flush.html https://bugs.webkit.org/show_bug.cgi?id=266528

Reviewed by Antti Koivisto.

This patch enables regular inline content with "text-align: justify" and ruby content.
1. Skip ruby content while computing the expansion opportunities for regular inline content
2. Run ruby-align for the base content

* Source/WebCore/layout/formattingContexts/inline/InlineContentAligner.cpp:
(WebCore::Layout::computedExpansions):
(WebCore::Layout::InlineContentAligner::applyTextAlignJustify):
(WebCore::Layout::InlineContentAligner::applyRubyAlignSpaceAround):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineAndFloatContent):

Canonical link: https://commits.webkit.org/272178@main